--- a/home.html
+++ b/home.html
@@ -113,7 +113,201 @@
       </div>
     </div>
     <div class="home-content">
-      <span class="text"> Home </span>
+
+      <div class="row w-100">
+        <div class="col-md-12">
+          <h2> احدث 10 طلبات </h2>
+          <div class="table-responsive w-100">
+            <table class="table table-hover table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">رقم الطلب</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">اسم العميل</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">السعر</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">طريقة الدفع</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">الحالة</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        #8758658
+                      </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        محمد
+                      </span>
+                    </td>
+                    <td>
+                        <span class="text-fourth-color font-medium text-[15px]"> 
+                            150 ر.س
+                        </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        كاش
+                      </span>
+                    </td>
+                    <td>
+                      <span class="bg-primary-color text-[#fff] font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                        تم التوصيل
+                    </span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        #8758658
+                      </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        محمد
+                      </span>
+                    </td>
+                    <td>
+                        <span class="text-fourth-color font-medium text-[15px]"> 
+                            150 ر.س
+                        </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        كاش
+                      </span>
+                    </td>
+                    <td>
+                      <span class="bg-[#d79806] text-[#fff] font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                        تحت التجهيز
+                    </span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        #8758658
+                      </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        محمد
+                      </span>
+                    </td>
+                    <td>
+                        <span class="text-fourth-color font-medium text-[15px]"> 
+                            150 ر.س
+                        </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        كاش
+                      </span>
+                    </td>
+                    <td>
+                      <span class="bg-second-color text-primary-color font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                        جاري الشحن
+                    </span>
+                    </td>
+                  </tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-md-12 mt-5">
+          <h2> احدث 10 منتجات </h2>
+          <div class="table-responsive w-100">
+            <table class="table table-hover table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">صورة المنتج</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">اسم المنتج</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">SKU</th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]"> الفئة </th>
+                    <th scope="col" class="text-third-color font-semibold text-[14px]">السعر</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        موبايل أيفون 15 برو ماكس , 512
+                      </span>
+                    </td>
+                    <td>
+                        <span class="text-fourth-color font-medium text-[15px]"> 
+                            HJHKG67FH5
+                        </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        أجهزة
+                      </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        20 ر.س
+                      </span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        موبايل أيفون 15 برو ماكس , 512
+                      </span>
+                    </td>
+                    <td>
+                        <span class="text-fourth-color font-medium text-[15px]"> 
+                            HJHKG67FH5
+                        </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        أجهزة
+                      </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        20 ر.س
+                      </span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        موبايل أيفون 15 برو ماكس , 512
+                      </span>
+                    </td>
+                    <td>
+                        <span class="text-fourth-color font-medium text-[15px]"> 
+                            HJHKG67FH5
+                        </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        أجهزة
+                      </span>
+                    </td>
+                    <td>
+                      <span class="text-fourth-color font-medium text-[15px]"> 
+                        20 ر.س
+                      </span>
+                    </td>
+                  </tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
